# cmd_macro

./: Cargo.toml  README.md
src/: args.rs  lib.rs  ok.rs  opt_arg.rs  output.rs
