[package]
name = "cmd_macro"
version = "0.1.0"
edition = "2021"

[features]
default = ["opt_arg", "output", "ok", "debug"]
opt_arg = []
output = []
ok = ["thiserror"]
debug = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "1.0.50", optional = true }
