[package]
name = "humane_commands"
version = "0.1.0"
edition = "2021"
description = "Allows you to write more shell-like Commands"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ichmed/cmd_macro"

[features]
default = ["opt_arg", "output", "ok"]
opt_arg = []
output = []
ok = ["thiserror"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "1.0.50", optional = true }
